--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -35,10 +35,6 @@
 }
 
 @media screen and (min-width: 550px) {
-  #skills {
-    padding: 20px;
-  }
-
   .list {
     grid-template-columns: repeat(3, 1fr);
   }
